Contrast menu links correctly

--- a/manuscript/page-8/style.css
+++ b/manuscript/page-8/style.css
@@ -48,7 +48,7 @@ ul li {
 }
 
 a {
-  background: #fff7ec;
+  background: #fff;
   float: left;
   width: 90%;
   clear: both;
