--- a/manuscript/page-9/style.css
+++ b/manuscript/page-9/style.css
@@ -47,7 +47,7 @@ ul li {
 }
 
 a {
-  background: #fff7ec;
+  background: #fff;
   float: left;
   width: 90%;
   clear: both;
